--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^5.6.0",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"preact": "^10.13.1",
 		"preact-iso": "^2.3.2",
